bynkc/tests/fixtures/positive/342_effect_result_combinators/input.bynk
commons demo.effres

-- The Effect[Result[T, E]] combinators (§2.8.3) transform the universal
-- cross-context shape without an intervening `<-`/match: mapOk/mapErr reshape
-- the success/error value, flatMapOk chains a further effectful step, and
-- flatMapErr attempts an effectful recovery.

fn fetchUser(id: Int) -> Effect[Result[Int, String]] {
  if id > 0 {
    Effect.pure(Ok(id))
  } else {
    Effect.pure(Err("bad id"))
  }
}

fn label(n: Int) -> String {
  "user"
}

fn continueWith(n: Int) -> Effect[Result[String, String]] {
  Effect.pure(Ok("ok"))
}

fn recover(e: String) -> Effect[Result[Int, String]] {
  Effect.pure(Ok(0))
}

fn mapped(id: Int) -> Effect[Result[String, String]] {
  fetchUser(id).mapOk((n: Int) => label(n))
}

fn errMapped(id: Int) -> Effect[Result[Int, Int]] {
  fetchUser(id).mapErr((e: String) => 500)
}

fn chained(id: Int) -> Effect[Result[String, String]] {
  fetchUser(id).flatMapOk((n: Int) => continueWith(n))
}

fn recovered(id: Int) -> Effect[Result[Int, String]] {
  fetchUser(id).flatMapErr((e: String) => recover(e))
}
